--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">StudyCase1</string>
+    <string name="judul1">Makan Malam</string>
+    <string name="judul2">dengan Milea</string>
+    <string name="button_eatbus">EATBUS</string>
+    <string name="button_abnormal">ABNORMAL</string>
+    <string name="menu_makanan">Masukkan Menu Makanan</string>
+    <string name="jumlah_porsi">Masukkan Jumlah Porsi</string>
+    <string name="tempatMakan">hehe</string>
+    <string name="menu2">hehe</string>
+    <string name="porsi2">hehe</string>
+    <string name="harga2">hehe</string>
 </resources>
