--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">StudyCase1</string>
+    <string name="app_name">Khania Putri_1202154350_Modul1</string>
     <string name="judul1">Makan Malam</string>
     <string name="judul2">dengan Milea</string>
     <string name="button_eatbus">EATBUS</string>
